syntax = "proto3";

option java_multiple_files = true;
option java_package = "socialmedia.proto";

package socialmedia;

service PostService {
    rpc PostPost (PostPostRequest) returns (Post) {}
    rpc GetFeed (GetFeedRequest) returns (stream Post) {}
}

message PostPostRequest {
    string content = 1;
    string image = 2;
    string date = 3;
    string author = 4;
}

message GetFeedRequest {
    optional string author = 1;
}

message Post {
    string content = 1;
    string image = 2;
    string date = 3;
    string author = 4;
}
